--- a/data-collection/Dockerfile
+++ b/data-collection/Dockerfile
@@ -1,6 +1,12 @@
-FROM python:3.9
+# Use an official Python image
+FROM python:3.10-slim
+
 WORKDIR /app
+
 COPY requirements.txt .
-RUN pip install -r requirements.txt
-COPY src/ src/
-CMD ["python", "src/collect_data.py"]
+RUN pip install --no-cache-dir -r requirements.txt
+
+COPY . .
+
+CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "5000"]
+
